--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "@tinymce/tinymce-vue": "^3.2.1",
     "axios": "0.18.1",
+    "codemirror": "^5.53.2",
     "element-ui": "2.13.0",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "tinymce": "^5.2.2",
+    "tui-editor": "^1.4.10",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
