--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Pan <panfree23@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "vue-cli-service serve",
+    "serve": "vue-cli-service serve",
     "build:prod": "vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
     "preview": "node build/index.js --preview",
@@ -15,7 +15,6 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
-    "@tinymce/tinymce-vue": "^3.2.1",
     "axios": "0.18.1",
     "codemirror": "^5.53.2",
     "element-ui": "2.13.0",
@@ -23,7 +22,6 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
-    "tinymce": "^5.2.2",
     "tui-editor": "^1.4.10",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
